--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
-    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "deprecated-react-native-prop-types": "^4.0.0",
