--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.3",
@@ -31,10 +30,11 @@
     "react-native-screens": "~3.20.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^18.0.1",
     "tailwindcss": "^3.2.7"
   },
   "private": true
