--- a/package.json
+++ b/package.json
@@ -10,31 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "deprecated-react-native-prop-types": "^4.0.0",
-    "expo": "^48.0.0",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-cli": "^6.3.2",
-    "expo-status-bar": "~1.4.4",
-    "global": "^4.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "expo": "~47.0.12",
+    "expo-barcode-scanner": "~12.1.0",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-udp": "^4.1.7",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "0.18.12",
+    "webpack-dev-server": "^4.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^18.0.1",
+    "@babel/core": "^7.12.9",
     "tailwindcss": "^3.2.7"
   },
   "private": true
