--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
+    "expo-device": "~5.0.0",
+    "expo-notifications": "~0.17.0",
+    "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-notifications": "^4.3.3",
     "react-native-udp": "^4.1.7",
     "react-native-web": "~0.18.9"
   },
