Updated readme and fixed some expo notifications

--- a/app.json
+++ b/app.json
@@ -1,9 +1,5 @@
 {
   "expo": {
-    "notification": {
-      "icon": "./assets/icon.png",
-      "vapidPublicKey": "BHP0Z1X"
-    },
     "name": "OmniDriveControl",
     "slug": "control-system-omnidrive-robot",
     "version": "1.0.0",
@@ -18,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
