--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-notifications": "^4.3.3",
     "react-native-udp": "^4.1.7",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
