--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,10 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-notifications": "^4.3.3",
-    "react-native-udp": "^4.1.7",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react-native-udp": "^4.1.7",
+    "react-native-web": "~0.18.9",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
