--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,12 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-notifications": "^4.3.3",
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "socket.io-client": "^4.6.1"
   },
