--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,8 @@
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
