--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
