--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
