--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/netinfo": "^9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
@@ -33,6 +35,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-notifications": "^4.3.3",
+    "react-native-reanimated": "^3.1.0",
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
