--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.3.6",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
@@ -37,7 +38,7 @@
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9",
+    "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
