--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mdns-js": "^1.0.3",
     "multicast-dns": "^7.2.5",
+    "ping": "^0.4.4",
+    "smb2": "^0.2.11",
     "socket.io": "^4.6.1"
   }
 }
