--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-device": "~5.0.0",
+    "expo-linear-gradient": "^12.1.2",
     "expo-notifications": "~0.17.0",
     "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
