--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "^9.3.5",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.9",
@@ -35,6 +36,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
