--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mdns-js": "^1.0.3",
     "multicast-dns": "^7.2.5",
+    "node-fetch": "^2.6.9",
     "ping": "^0.4.4",
     "smb2": "^0.2.11",
     "socket.io": "^4.6.1"
