--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
