--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "^9.3.5",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -23,32 +23,34 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "deprecated-react-native-prop-types": "^4.0.0",
-    "expo": "~47.0.12",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-device": "~5.0.0",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-notifications": "~0.17.0",
-    "expo-permissions": "~14.0.0",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
+    "eas-cli": "^3.10.2",
+    "expo": "^48.0.0",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-device": "~5.2.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-async-storage": "^0.0.1",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "tailwindcss": "^3.2.7"
   },
   "private": true
