--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,16 @@
 {
   "name": "omnidrivecontrol",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "type": "module",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -24,16 +24,17 @@
     "axios": "^1.3.6",
     "deprecated-react-native-prop-types": "^4.0.0",
     "eas-cli": "^3.10.2",
-    "expo": "^48.0.0",
+    "expo": "~48.0.15",
     "expo-barcode-scanner": "~12.3.2",
     "expo-device": "~5.2.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-notifications": "~0.18.1",
     "expo-permissions": "~14.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
     "react-native-async-storage": "^0.0.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-elements": "^3.4.3",
