--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-animatable": "^1.3.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
