--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -39,10 +38,13 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12",
+    "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "tailwindcss": "^3.2.7"
   },
   "private": true
