--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dns": "^0.2.2",
     "dotenv": "^16.0.3",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "mdns-js": "^1.0.3",
     "multicast-dns": "^7.2.5",
