--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "^1.7.1",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
     "react-native-reanimated": "~2.14.4",
@@ -49,7 +50,8 @@
     "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.11",
+    "react-native-web": "^0.18.12",
+    "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
