--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "expo-dev-client": "~2.2.1",
     "expo-device": "~5.2.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-notifications": "~0.18.1",
     "expo-permissions": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
