--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.3.6",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.0",
@@ -61,9 +62,15 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-react-native": "^18.0.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7"
   },
   "private": true
