--- a/client/package.json
+++ b/client/package.json
@@ -46,10 +46,11 @@
     "react-native-maps": "^1.7.1",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
+    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
