Update to fix eas build

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["@babel/preset-env"],
-  "targets": {
-    "node": "current"
-  }
+  "plugins": [
+    // other plugins
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
+  ]
 }
