--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "@testing-library/react": "^14.0.0",
     "axios": "^1.3.6",
     "deprecated-react-native-prop-types": "^4.0.0",
-    "expo": "~47.0.0",
+    "expo": "^48.0.0",
     "expo-barcode-scanner": "~12.3.2",
     "expo-dev-client": "~2.2.1",
     "expo-device": "~5.2.1",
@@ -43,18 +43,18 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
     "react-native-material": "^0.0.4",
     "react-native-notifications": "^4.3.3",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.4.0",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12",
-    "react-native-webview": "^12.0.2",
+    "react-native-web": "~0.18.11",
+    "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
@@ -69,7 +69,7 @@
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.1.2",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
+    "jest": "^29.2.1",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7"
