--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,7 +1,9 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": ["@babel/preset-env"]
+  /*
   "plugins": [
     // other plugins
     ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
   ]
+  */
 }
