Updated android files

--- a/client/app.json
+++ b/client/app.json
@@ -12,21 +12,26 @@
       "backgroundColor": "#ffffff"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/fd3a68ef-3868-400b-8eb6-0157339cc9c6"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.streafe.controlsystemomnidriverobot"
+      "bundleIdentifier": "com.streafe.controlsystemomnidriverobot",
+      "runtimeVersion": {
+        "policy": "sdkVersion"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.streafe.controlsystemomnidriverobot"
+      "package": "com.streafe.controlsystemomnidriverobot",
+      "runtimeVersion": "1.0.0"
     },
     "web": {
       "favicon": "./assets/favicon.png"
