--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     ext {
-        buildToolsVersion = '33.0.0'
+        buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-        kotlinVersion = findProperty('kotlinVersion') ?: '1.5.31' // Update with your desired Kotlin version
-        frescoVersion = findProperty('expo.frescoVersion') ?: '2.5.0'
+        kotlinVersion = findProperty('kotlinVersion') ?: '1.8.21' // Update with your desired Kotlin version
+        frescoVersion = findProperty('expo.frescoVersion') ?: '3.0.0'
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
