--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@ide/backoff": "^1.0.0",
@@ -24,8 +23,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react": "^14.0.0",
     "axios": "^1.3.6",
+    "babel-preset-expo": "^9.3.2",
     "deprecated-react-native-prop-types": "^4.0.0",
-    "expo": "^48.0.0",
+    "expo": "~48.0.17",
     "expo-barcode-scanner": "~12.3.2",
     "expo-dev-client": "~2.2.1",
     "expo-device": "~5.2.1",
@@ -35,9 +35,10 @@
     "expo-permissions": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
     "react-native-animatable": "^1.3.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-ble-plx": "^2.0.3",
@@ -57,8 +58,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.6.1",
-    "expo-updates": "~0.16.4"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -71,7 +71,6 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.2.1",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7"
   },
   "private": true
