--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1"
   },
@@ -70,6 +71,7 @@
     "@testing-library/react-native": "^12.1.2",
     "babel-jest": "^29.5.0",
     "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-react-native": "^18.0.0",
     "tailwindcss": "^3.2.7"
   },
