--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "jest": "^29.2.1",
     "jest-environment-jsdom": "^29.5.0",
     "jest-react-native": "^18.0.0",
+    "jsdom": "^22.0.0",
     "tailwindcss": "^3.2.7"
   },
   "private": true
